@@ -1,5 +1,15 @@
 2012-01-05  Gavin Barraclough  <barraclough@apple.com>
 
+        date.toISOString produces incorrect results for dates with ms prior to 1970
+        https://bugs.webkit.org/show_bug.cgi?id=75684
+
+        Reviewed by Sam Weinig.
+
+        * runtime/DatePrototype.cpp:
+        (JSC::dateProtoFuncToISOString):
+
+2012-01-05  Gavin Barraclough  <barraclough@apple.com>
+
         Array.prototype.lastIndexOf ignores undefined fromIndex.
         https://bugs.webkit.org/show_bug.cgi?id=75678
 
